--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,6 +91,15 @@
 			<version>0.9.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+		<dependency>
+		    <groupId>org.powermock</groupId>
+		    <artifactId>powermock-module-junit4</artifactId>
+		    <version>2.0.9</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
