--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/finalhouse?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/housedb?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
@@ -16,3 +16,4 @@ logging.level.org.springframework.transaction=trace
 logging.level.org.springframework.jdbc= trace
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
