--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=10055
 
-spring.datasource.url=jdbc:mysql://localhost:3306/finalhouse?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/housedb?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
@@ -13,3 +13,4 @@ logging.level.org.springframework.transaction=trace
 logging.level.org.springframework.jdbc= trace
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
