feat: saleBoard controller, service 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=ssafy
 
 mybatis.type-aliases-package=com.ssafy.myhome.model.dto
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumTypeHandler
 
 logging.level.jdbc.sqlonly=trace
 logging.level.com.ssafy.myhome=trace
