--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
