--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
